1.1beta1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #11862: Allow arrays to have automatically generated keys.


1.1alpha1 - Monday 29 October 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added ezcWorkflowNodeLoop class to conveniently express loops.
- Refactored the XML definition storage:

  - DOM is now used for both the loading and saving of workflows (issue
    #10702).
  - The marshalling of the node configuration is now handled in the individual
    node classes. This makes it possible to have custom node classes handled by
    the XML definition storage.

- Default node configurations are handled better now.
- Implemented issue #10883: Apply comparison conditions to two variables.
- Implemented issue #10918: Error messages when loading invalid XML.
- Implemented issue #10985: Mapping variables between parent and sub workflows.
- Implemented issue #11003: Add ELSE option to exclusive choice.
- Fixed issue #11068: Implement ezcWorkflowExecution::hasVariable().


1.0.1 - Monday 30 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11067: $execution->getVariable() throws an exeception if value
  of variable is null.
- Fixed format string issue in ezcWorkflowExecution::endThread().

1.0 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed an issue that is caused by a bug in PHP 5.2.1.


1.0rc1 - Monday 25 June 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10919: Input validation of all waiting variables before
  throwing an exception.
- Fixed issue #10922: Resuming with execution ID.
- Fixed issue #10968: Allow service objects to suspend the workflow execution.
- Documentation updates and fixes.


1.0beta2 - Thursday 31 May 2007