@@ -1,3 +1,6 @@
+- Fixed issue #12144: Resuming from synchronization of parallel split fails.
+
+
 1.1beta1 - Wednesday 28 November 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
